z-index fixed

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -30,6 +30,7 @@ body
 	&.is-active
 		top: 0
 		opacity: 0.5
+		z-index: 11
 	&.is-up
 		top: -100%
 	&.is-down
